internal/testdata/sdk/error/fixtures/upgrade_error.go
// Generated by Fern. Do not edit.

package api

import (
	json "encoding/json"
	fmt "fmt"
)

type UpgradeError struct {
	StatusCode int
	Body       string
}

func (u *UpgradeError) Error() string {
	return fmt.Sprintf("426: %+v", *u)
}

func (u *UpgradeError) UnmarshalJSON(data []byte) error {
	var body string
	if err := json.Unmarshal(data, &body); err != nil {
		return err
	}
	if body != "upgrade" {
		return fmt.Errorf("expected literal %q, but found %q", "upgrade", body)
	}
	u.StatusCode = 426
	u.Body = body
	return nil
}

func (u *UpgradeError) MarshalJSON() ([]byte, error) {
	return json.Marshal("upgrade")
}
